--- a/src/sass/_contact.sass
+++ b/src/sass/_contact.sass
@@ -52,8 +52,8 @@
       .contact-button
         +button($monoFifth)
         &.disabled
-          color: lighten($monoFourth, 15%)
-          background: $slantGrade
+          color: lighten($monoFourth, 40%)
+          background: rgba($monoPrimary,.5)
           pointer-events: none
         &.btn-sent
           color: white
@@ -65,6 +65,7 @@
       display: flex
       flex-direction: row
       justify-content: space-around
+      box-shadow: inset $float-shadow
       // background: pink
       // display: grid
       // grid-template-columns: 1fr 1fr
@@ -72,10 +73,15 @@
 
       a
         text-decoration: none
-        color: $monoPrimary
-        transition: .5s all cubic-bezier(0.36,-0.32, 0.23, 1.17)
+        color: rgba($monoPrimary,.5)
+        // transition: .5s all cubic-bezier(0.36,-0.32, 0.23, 1.17)
         &:hover
           color: $monoFifth
+          .icon-set
+            .contact-icon
+              // transition: all .5s cubic-bezier(0.36,-0.32, 0.23, 1.17)
+              *
+                fill: $monoFifth
           svg
             #background
               fill: $monoFifth
@@ -96,11 +102,11 @@
 
         .contact-icon
           max-width: 50px
-          max-height: 50px
+          // max-height: 50px
           display: block
           margin: 0 auto
-        *
-          fill: $monoPrimary
+          *
+            fill: rgba($monoPrimary,.5)
 
         h4, p
           text-align: center
