--- a/src/sass/_pictures.sass
+++ b/src/sass/_pictures.sass
@@ -20,6 +20,7 @@
         max-width: 100%
         height: auto
         cursor: pointer
+        transition: box-shadow .3s ease
         &:hover
           box-shadow: $float-shadow
       
@@ -54,7 +55,7 @@
     // display: grid
     // grid-template-columns: 1fr 2fr
     width: 90%
-    margin: 37.5px auto 75px
+    margin: 75px auto
     // background: rgba($monoSecondary,.5)
 
     // h4
@@ -65,7 +66,7 @@
       padding: 15px 0
       // width: 50%
       // flex-direction: column
-      // box-shadow: $float-shadow
+      box-shadow: $float-shadow
       a
         height: 50px
       svg
