--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -23,7 +23,7 @@ $largeBreak: 750px
 
 // box-shadow
 $shadow: 0px 5px 8px -6px rgba($monoPrimary, .75)
-$float-shadow: 0px 5px 12px -2px rgba($monoPrimary, .75)
+$float-shadow: 0px 5px 10px -4px rgba($monoPrimary, .5)
 
 // section setup
 =section($color: rgba($gold,1))
